--- a/Numpy_Practice_Exercise.ipynb
+++ b/Numpy_Practice_Exercise.ipynb
@@ -11,7 +11,9 @@
         "b3t7n_rExqYz",
         "uUFmB7et1ezJ",
         "4-lwm_mrag6f"
-      ]
+      ],
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,6 +21,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/akankshabw/Chirp/blob/master/Numpy_Practice_Exercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
